header and content

--- a/index.html
+++ b/index.html
@@ -45,15 +45,73 @@
 
 <section>
 	<div class="about">
-		<div class="about-header">
+		<div class="about-header flex">
 			<h2>Know About Us</h2>
 			<hr>
-			<p>Nam liber tempor cum soluta nobis eleifend option 
+			<p>Nam liber tempor cum soluta nobis eleifend option<br> 
 				congue nihil imperdiet doming id quod mazim 
 			</p>
 		</div>
-		<div class="about-content"></div>
-		<div class="about-footer"></div>
+		<div class="about-content flex">
+			<div class="about-content-text">
+				<h3>We Are the best</h3>
+				<p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat <br><br>				
+
+				Volutpat wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum </p>
+				<div class="btn">
+					<a href="#">READ MORE <i class="fas fa-arrow-right"></i></a>
+				</div>
+			</div>
+			<div class="skew-img">
+				<img src="img/people.png" alt="people">
+			</div>
+		</div>
+		<div class="about-footer flex">
+			<h3>Services We provide</h3>
+			<p>Volutpat wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent  </p>
+			<div class="column flex">
+				<div class="column-item">
+					<div class="icon"><i class="fas fa-users"></i></div>
+					<h4>CONSULTANSY</h4>
+					<p>Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare quam </p>
+				</div>
+				<div class="column-item">
+					<div class="icon"><i class="fas fa-bullhorn"></i></div>
+					<h4>MAKETING</h4>
+					<p>Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare quam </p>
+				</div>
+				<div class="column-item">
+					<div class="icon"><i class="fas fa-flask"></i></div>
+					<h4>RESEARCH</h4>
+					<p>Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare quam </p>
+				</div>
+			</div>
+		</div>
+		<div class="skills flex">
+			<h2>OUR SKILLS</h2>
+			<div class="col flex">
+				<div class="disc">
+				<div class="disc-item">85%</div>
+					<p>Marketing</p>
+				</div>
+				<div class="disc">
+					<div class="disc-item">85%</div>
+					<p>Reaserch</p>
+				</div>
+				<div class="disc">
+					<div class="disc-item">85%</div>
+					<p>Management</p>
+				</div>
+				<div class="disc">
+					<div class="disc-item">85%</div>
+					<p>Consultancy</p>
+				</div>
+				<div class="disc">
+					<div class="disc-item">85%</div>
+					<p>Promotion</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
 
