--- a/index.html
+++ b/index.html
@@ -57,5 +57,61 @@
 	</div>
 </section>
 
+<section>
+	<div class="project">
+		<div class="project-text">
+			<h2>OUR TEAM MEBERS</h2>
+			<hr>
+			<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim </p>
+		</div>
+		<div class="project-foto flex">
+			<div class="project-foto-item">
+				<div class="img">
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-facebook"></i></a>
+					<a href="#"><i class="fab fa-linkedin-in"></i></a>
+				</div> 
+				<div class="text">
+					<h4>Mitchell Anderson</h4>
+					<p>Creative Director</p>
+				</div>
+			</div>
+			<div class="project-foto-item">
+				<div class="img">
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-facebook"></i></a>
+					<a href="#"><i class="fab fa-linkedin-in"></i></a>
+				</div> 
+				<div class="text">
+					<h4>Mitchell Anderson</h4>
+					<p>Creative Director</p>
+				</div>
+			</div>
+			<div class="project-foto-item">
+				<div class="img">
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-facebook"></i></a>
+					<a href="#"><i class="fab fa-linkedin-in"></i></a>
+				</div> 
+				<div class="text">
+					<h4>Mitchell Anderson</h4>
+					<p>Creative Director</p>
+				</div>
+			</div>
+		</div>
+		<div class="project-black flex">
+			<h3>What Our Clients are saying</h3>
+			<blockquote cite="www.yourwebsite.zt">It was a pleasure to work with Imran. He is very dedicated and professional. 
+He worked very hard to satisfy our requirements and the communication was great.
+</blockquote>
+			<cite>John Doe </cite>
+			<a href="www.yourwebsite.zt">www.yourwebsite.zt</a>
+			<div class="navi"><a href="#"><i class="far fa-circle"></i></a>
+			<a href="#"><i class="far fa-circle"></i></a>
+			<a href="#"><i class="far fa-circle"></i></a></div>
+		</div>
+	</div>
+</section>
+
 </body>
 </html>
