--- a/starterpack/index.html
+++ b/starterpack/index.html
@@ -11,7 +11,8 @@
 	<meta name="viewport" content="width=device-width">
 
 	<link rel="icon" href="img/favicon.png">
-	
+
+	<link rel="stylesheet" href="style/normalize.css">
 	<link rel="stylesheet" href="style/style.css">
 
 </head>
